--- a/testing/photos.html
+++ b/testing/photos.html
@@ -10,12 +10,46 @@
 		<link rel="shortcut icon" href="favicon.ico">
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 		<!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
 		<style>
-		article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}body{margin:0;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;margin:0.67em 0;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:bold;}dfn{font-style:italic;}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace,serif;font-size:1em;}pre{white-space:pre-wrap;}q{quotes:"\201C" "\201D" "\2018" "\2019";}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-0.5em;}sub{bottom:-0.25em;}img{border:0;}svg:not(:root){overflow:hidden;}figure{margin:0;}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em;}legend{border:0;padding:0;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,select{text-transform:none;}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;}button[disabled],html input[disabled]{cursor:default;}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}
-			*,
-			*::after,
-			*::before {
-				box-sizing: border-box;
+		
+			@keyframes visible {
+				from {
+					opacity: 0;
+				}
+				to {
+					opacity: 1;
+				}
+			}
+			@keyframes slideInFromTop {
+				0% {
+					transform: translateY(9rem);
+					opacity: 0;
+				}
+				100% {
+					transform: translateY(0);
+					opacity: 1;
+				}
+			}
+
+			@keyframes slideInFromBottom {
+				0% {
+					transform: translateY(-9rem);
+					opacity: 0;
+				}
+				100% {
+					transform: translateY(0);
+					opacity: 1;
+				}
+			}
+
+			@keyframes fadeIn {
+				0% {
+					opacity: 0;
+				}
+				100% {
+					opacity: 1;
+				}
 			}
 
 			body {
@@ -35,33 +69,7 @@
 				overflow-x: hidden;
 			}
 
-			/* Page Loader */
-			.js .loading::before {
-				content: '';
-				position: fixed;
-				z-index: 100000;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background: var(--color-bg);
-			}
-
-			.js .loading::after {
-				content: '';
-				position: fixed;
-				z-index: 100000;
-				top: 50%;
-				left: 50%;
-				width: 60px;
-				height: 60px;
-				margin: -30px 0 0 -30px;
-				pointer-events: none;
-				border-radius: 50%;
-				opacity: 0.4;
-				background: var(--color-link);
-				animation: loaderAnim 0.7s linear infinite alternate forwards;
-			}
+			
 
 			@keyframes loaderAnim {
 				to {
@@ -161,6 +169,7 @@
 			}
 
 			.menu {
+				animation: 0.6s ease-out 0s 1 slideInFromTop;
 				position: fixed;
 				top: 0;
 				left: 0;
@@ -238,6 +247,7 @@
 			}
 
 			.gridwrap {
+				animation: 1s ease-out 0s 1 fadeIn;
 				display: grid;
 				max-width: 1300px;
 				margin: 0 auto;
@@ -286,6 +296,7 @@
 				grid-gap: var(--gridgap);
 				align-content: center;
 				justify-content: center;
+
 			}
 
 			.grid__item {
@@ -294,6 +305,7 @@
 				background-repeat: no-repeat;
 				background-position: 50% 50%;
 				background-size: cover;
+
 			}
 
 			.grid--open .grid__item {
@@ -393,9 +405,13 @@
 				position: relative;
 				overflow: hidden;
 				height: 100vh;
+
 			}
 
+
+
 			.main_header {
+				animation: 0.6s ease-out 0s 1 slideInFromBottom;
 				width: 100%;
 				height: 6.25rem;
 			}
@@ -420,6 +436,11 @@
 				text-decoration-skip-ink: auto;
 				cursor: pointer;
 				box-sizing: border-box;
+				font-size: 1rem;
+    			font-family: "Roboto";
+    			line-height: 1.5rem;
+    			font-weight: 900;
+    			text-rendering: optimizelegibility;
 			}
 
 			.nav_logo {
@@ -433,9 +454,10 @@
 				user-select: auto !important;
 				box-sizing: border-box;
 				display: block;
-				font-family: Roboto, Arial, sans-serif;
+				font-family: "Roboto";
     			line-height: 1.5rem;
-				tab-size: 4;
+				tab-size: 2;
+				letter-spacing: -0.01em;
 			}
 
 			@media screen and (min-width: 53em) {
