--- a/testing/photos.html
+++ b/testing/photos.html
@@ -285,9 +285,9 @@
 
 			.grid {
 				grid-area: 2 / 1 / 3 / 2;
-				--gridgap: 3vw;
+				--gridgap: 2vw;
 				--gridwidth: 100%;
-				--gridheight: calc(100vh - 9.6875rem);
+				--gridheight: calc(100vh - 15rem);
 				display: grid;
 				width: var(--gridwidth);
 				height: var(--gridheight);
@@ -328,27 +328,27 @@
 			}
 
 			/* Layout 1 */
-			.grid--layout-1 .grid__item:first-child {grid-area: 3 / 1 / 8 / 4;}
-			.grid--layout-1 .grid__item:nth-child(2) {grid-area: 1 / 2 / 3 / 4;}
-			.grid--layout-1 .grid__item:nth-child(3) {grid-area: 5 / 4 / 8 / 8; }
-			.grid--layout-1 .grid__item:nth-child(4) {grid-area: 2 / 7 / 5 / 11;}
-			.grid--layout-1 .grid__item:nth-child(5) {grid-area: 1 / 4 / 5 / 7;}
-			.grid--layout-1 .grid__item:nth-child(6) {grid-area: 8 / 5 / 11 / 2;}
-			.grid--layout-1 .grid__item:nth-child(7) {grid-area: 10 / 9 / 8 / 11;}
-			.grid--layout-1 .grid__item:nth-child(8) {grid-area: 5 / 8 / 8 / 10;}
-			.grid--layout-1 .grid__item:nth-child(9) {grid-area: 8 / 5 / 11 / 9;}
+			.grid--layout-1 .grid__item:first-child {grid-area: 4 / 1 / 8 / 4;}
+			.grid--layout-1 .grid__item:nth-child(2) {grid-area: 1 / 2 / 4 / 5;}
+			.grid--layout-1 .grid__item:nth-child(3) {grid-area: 4 / 4 / 6 / 8; }
+			.grid--layout-1 .grid__item:nth-child(4) {grid-area: 2 / 8 / 5 / 11;}
+			.grid--layout-1 .grid__item:nth-child(5) {grid-area: 1 / 5 / 4 / 8;}
+			.grid--layout-1 .grid__item:nth-child(6) {grid-area: 8 / 5 / 10 / 2;}
+			.grid--layout-1 .grid__item:nth-child(7) {grid-area: 6 / 4 / 8 / 8;}
+			.grid--layout-1 .grid__item:nth-child(8) {grid-area: 5 / 8 / 8 / 11;}
+			.grid--layout-1 .grid__item:nth-child(9) {grid-area: 8 / 5 / 11 / 10;}
 
 
 			/* Layout 2 */
-			.grid--layout-2 .grid__item:first-child {grid-area: 2 / 1 / 5 / 4;}
-			.grid--layout-2 .grid__item:nth-child(2) {grid-area: 1 / 4 / 5 / 7;}
-			.grid--layout-2 .grid__item:nth-child(3) {grid-area: 5 / 2 / 7 / 5;}
+			.grid--layout-2 .grid__item:first-child {grid-area: 9 / 2 / 11 / 10;}
+			.grid--layout-2 .grid__item:nth-child(2) {grid-area: 1 / 3 / 3 / 7;}
+			.grid--layout-2 .grid__item:nth-child(3) {grid-area: 3 / 1 / 5 / 7;}
 			.grid--layout-2 .grid__item:nth-child(4) {grid-area: 1 / 7 / 4 / 11;}
-			.grid--layout-2 .grid__item:nth-child(5) {grid-area: 5 / 7 / 7 / 5;}
-			.grid--layout-2 .grid__item:nth-child(6) {grid-area: 7 / 5 / 10 / 1;}
-			.grid--layout-2 .grid__item:nth-child(7) {grid-area: 4 / 7 / 7 / 9;}
-			.grid--layout-2 .grid__item:nth-child(8) {grid-area: 4 / 9 / 9 / 11;}
-			.grid--layout-2 .grid__item:nth-child(9) {grid-area: 7 / 5 / 11 / 9;}
+			.grid--layout-2 .grid__item:nth-child(5) {grid-area: 5 / 4 / 7 / 7;}
+			.grid--layout-2 .grid__item:nth-child(6) {grid-area: 7 / 6 / 9 / 11;}
+			.grid--layout-2 .grid__item:nth-child(7) {grid-area: 5 / 1 / 7 / 4;}
+			.grid--layout-2 .grid__item:nth-child(8) {grid-area: 7 / 1 / 9 / 6;}
+			.grid--layout-2 .grid__item:nth-child(9) {grid-area: 4 / 7 / 7 / 11;}
 
 			/* Layout 3 */
 			.grid--layout-3 .grid__item:first-child {grid-area: 1 / 2 / 3 / 5;}
@@ -373,13 +373,13 @@
 			.grid--layout-4 .grid__item:nth-child(9) {grid-area: 8 / 5 / 11 / 9;}
 
 			/* Layout 5 */
-			.grid--layout-5 .grid__item:first-child {grid-area: 3 / 1 / 8 / 4;}
-			.grid--layout-5 .grid__item:nth-child(2) {grid-area: 5 / 4 / 8 / 8; }
-			.grid--layout-5 .grid__item:nth-child(3) {grid-area: 2 / 7 / 5 / 11;}
-			.grid--layout-5 .grid__item:nth-child(4) {grid-area: 1 / 4 / 5 / 7;}
-			.grid--layout-5 .grid__item:nth-child(5) {grid-area: 8 / 5 / 11 / 2;}
-			.grid--layout-5 .grid__item:nth-child(6) {grid-area: 5 / 8 / 8 / 10;}
-			.grid--layout-5 .grid__item:nth-child(7) {grid-area: 8 / 5 / 11 / 9;}
+			.grid--layout-5 .grid__item:first-child {grid-area: 6 / 1 / 9 / 6;}
+			.grid--layout-5 .grid__item:nth-child(2) {grid-area: 5 / 6 / 9 / 11; }
+			.grid--layout-5 .grid__item:nth-child(3) {grid-area: 1 / 2 / 3 / 9;}
+			.grid--layout-5 .grid__item:nth-child(4) {grid-area: 3 / 1 / 6 / 6;}
+			.grid--layout-5 .grid__item:nth-child(5) {grid-area: 9 / 2 / 11 / 6;}
+			.grid--layout-5 .grid__item:nth-child(6) {grid-area: 3 / 6 / 5 / 11;}
+			.grid--layout-5 .grid__item:nth-child(7) {grid-area: 9 / 6 / 11 / 11;}
 
 			.content__item {
 				max-width: 600px;
@@ -537,13 +537,54 @@
 					grid-gap: 3rem;
 					padding: 2rem 5vw;
 				}
+
 				.grid {
+					grid-area: 2 / 1 / 3 / 2;
+					--gridgap: 3vw;
+					--gridwidth: 100%;
 					--gridheight: 1100px;
+					display: grid;
+					width: var(--gridwidth);
+					height: var(--gridheight);
+					grid-template-rows: repeat(10,calc(var(--gridheight) / 10 - var(--gridgap)));
+					grid-template-columns: repeat(10,calc(var(--gridwidth) / 10 - var(--gridgap)));
+					grid-gap: var(--gridgap);
+					align-content: center;
+					justify-content: center;
 				}
 				.content__item {
 					font-size: 1.5rem;
 					padding: 10vh 1rem;
 				}
+				/* Layout 1 */
+				.grid--layout-1 .grid__item:first-child {grid-area: 3 / 1 / 8 / 4;}
+				.grid--layout-1 .grid__item:nth-child(2) {grid-area: 1 / 2 / 3 / 4;}
+				.grid--layout-1 .grid__item:nth-child(3) {grid-area: 5 / 4 / 8 / 8; }
+				.grid--layout-1 .grid__item:nth-child(4) {grid-area: 2 / 7 / 5 / 11;}
+				.grid--layout-1 .grid__item:nth-child(5) {grid-area: 1 / 4 / 5 / 7;}
+				.grid--layout-1 .grid__item:nth-child(6) {grid-area: 8 / 5 / 11 / 2;}
+				.grid--layout-1 .grid__item:nth-child(7) {grid-area: 10 / 9 / 8 / 11;}
+				.grid--layout-1 .grid__item:nth-child(8) {grid-area: 5 / 8 / 8 / 10;}
+				.grid--layout-1 .grid__item:nth-child(9) {grid-area: 8 / 5 / 11 / 9;}
+
+					/* Layout 2 */
+				.grid--layout-2 .grid__item:first-child {grid-area: 2 / 1 / 5 / 4;}
+				.grid--layout-2 .grid__item:nth-child(2) {grid-area: 1 / 4 / 5 / 7;}
+				.grid--layout-2 .grid__item:nth-child(3) {grid-area: 5 / 2 / 7 / 5;}
+				.grid--layout-2 .grid__item:nth-child(4) {grid-area: 1 / 7 / 4 / 11;}
+				.grid--layout-2 .grid__item:nth-child(5) {grid-area: 5 / 7 / 7 / 5;}
+				.grid--layout-2 .grid__item:nth-child(6) {grid-area: 7 / 5 / 10 / 1;}
+				.grid--layout-2 .grid__item:nth-child(7) {grid-area: 4 / 7 / 7 / 9;}
+				.grid--layout-2 .grid__item:nth-child(8) {grid-area: 4 / 9 / 9 / 11;}
+				.grid--layout-2 .grid__item:nth-child(9) {grid-area: 7 / 5 / 11 / 9;}
+					/* Layout 5 */
+				.grid--layout-5 .grid__item:first-child {grid-area: 3 / 1 / 8 / 4;}
+				.grid--layout-5 .grid__item:nth-child(2) {grid-area: 5 / 4 / 8 / 8; }
+				.grid--layout-5 .grid__item:nth-child(3) {grid-area: 2 / 7 / 5 / 11;}
+				.grid--layout-5 .grid__item:nth-child(4) {grid-area: 1 / 4 / 5 / 7;}
+				.grid--layout-5 .grid__item:nth-child(5) {grid-area: 8 / 5 / 11 / 2;}
+				.grid--layout-5 .grid__item:nth-child(6) {grid-area: 5 / 8 / 8 / 10;}
+				.grid--layout-5 .grid__item:nth-child(7) {grid-area: 8 / 5 / 11 / 9;}
 			}
 		</style>
 	</head>
